@@ -1,3 +1,9 @@
+Fri Aug 29 10:39:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* utils/dump_field_actions.py: Add script to dump the field actions
+	  for a database.
+	* utils/replay_search_log.py: Correct copyright date.
+
 Fri Aug 29 09:54:01 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/replay_search_log.py: Add utility to replay a search log,
